compiler/testData/diagnostics/tests/varargs/kt1838-val.kt
class A(vararg val t : Int) {
    constructor {
        val <!UNUSED_VARIABLE!>t1<!> : IntArray = t
    }
}
